--- a/environment.yaml
+++ b/environment.yaml
@@ -1,9 +1,8 @@
-name: local_colab
+name: mPFC_1p_analysis
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - python=3.8.5
+  - python=3.10.12
   # Core analysis/plotting
   - numpy=1.26.4
   - pandas=1.5.2
